--- a/src/components/Feedback.module.scss
+++ b/src/components/Feedback.module.scss
@@ -4,4 +4,32 @@
   flex-direction: column;
   align-items: center;
   margin-top: 50px;
+
+  .buttons_content {
+    display: flex;
+    flex-direction: row;
+    width: 25%;
+    margin: 20px auto;
+    justify-content: space-evenly;
+    align-items: center;
+
+    button {
+      width: 60px;
+      background-color: fuchsia;
+      color: aliceblue;
+      border: none;
+      outline: none;
+      height: 25px;
+      border-radius: 10px;
+    }
+  }
+
+  .statistics {
+    display: flex;
+    flex-direction: column;
+    width: 25%;
+    height: 200px;
+    justify-content: space-between;
+
+  }
 }
